[gd_scene load_steps=71 format=3 uid="uid://cb8fa5ck7fqve"]

[ext_resource type="Script" path="res://Scripts/Charactors/player.gd" id="1_q8q0r"]
[ext_resource type="Texture2D" uid="uid://cxx1kot6lpxpc" path="res://brackeys_platformer_assets/sprites/knight.png" id="1_xw3le"]
[ext_resource type="AudioStream" uid="uid://cnrmbqvg2m02y" path="res://brackeys_platformer_assets/sounds/jump.wav" id="3_7115e"]
[ext_resource type="AudioStream" uid="uid://cvditavj6s02d" path="res://brackeys_platformer_assets/sounds/hurt.wav" id="3_omvlk"]
[ext_resource type="AudioStream" uid="uid://d0hjiwixh2ut3" path="res://brackeys_platformer_assets/sounds/power_up.wav" id="5_wv0jb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nk6ra"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq6bl"]
atlas = ExtResource("1_xw3le")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fplxr"]
atlas = ExtResource("1_xw3le")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_03cue"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfnvt"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgiom"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnefl"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_08g85"]
atlas = ExtResource("1_xw3le")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2v11"]
atlas = ExtResource("1_xw3le")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1fvb"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_llqys"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06kvn"]
atlas = ExtResource("1_xw3le")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhp3j"]
atlas = ExtResource("1_xw3le")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8xtm"]
atlas = ExtResource("1_xw3le")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwr6m"]
atlas = ExtResource("1_xw3le")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_db3xp"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvxw3"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wvv4"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3wym"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p6u6"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7weot"]
atlas = ExtResource("1_xw3le")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c7f7"]
atlas = ExtResource("1_xw3le")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1pe4"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6anaf"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o0sq"]
atlas = ExtResource("1_xw3le")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_va3kx"]
atlas = ExtResource("1_xw3le")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4lyh"]
atlas = ExtResource("1_xw3le")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uv51"]
atlas = ExtResource("1_xw3le")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2pmb"]
atlas = ExtResource("1_xw3le")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_upiuv"]
atlas = ExtResource("1_xw3le")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4ciw"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_habgb"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4ffb"]
atlas = ExtResource("1_xw3le")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsgo5"]
atlas = ExtResource("1_xw3le")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyeg3"]
atlas = ExtResource("1_xw3le")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnhjh"]
atlas = ExtResource("1_xw3le")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1vua"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubl7m"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmlxx"]
atlas = ExtResource("1_xw3le")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhtdk"]
atlas = ExtResource("1_xw3le")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx4la"]
atlas = ExtResource("1_xw3le")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblgi"]
atlas = ExtResource("1_xw3le")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m46u2"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3r77s"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeyb5"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoi4p"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aoew"]
atlas = ExtResource("1_xw3le")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u45c"]
atlas = ExtResource("1_xw3le")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srde8"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou0b4"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnxli"]
atlas = ExtResource("1_xw3le")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk0fj"]
atlas = ExtResource("1_xw3le")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tit5c"]
atlas = ExtResource("1_xw3le")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhknc"]
atlas = ExtResource("1_xw3le")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8tm5"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1odrr"]
atlas = ExtResource("1_xw3le")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_byn2h"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhox5"]
atlas = ExtResource("1_xw3le")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0kcj"]
atlas = ExtResource("1_xw3le")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ltby"]
atlas = ExtResource("1_xw3le")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w5i82"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk6ra")
}],
"loop": true,
"name": &"Crawl",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq6bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fplxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03cue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfnvt")
}],
"loop": false,
"name": &"Die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgiom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnefl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08g85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2v11")
}],
"loop": true,
"name": &"ForwardJump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1fvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llqys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06kvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhp3j")
}],
"loop": true,
"name": &"ForwardRoll",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8xtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwr6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db3xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvxw3")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wvv4")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3wym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p6u6")
}],
"loop": true,
"name": &"OnTree",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7weot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c7f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1pe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6anaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o0sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va3kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4lyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uv51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2pmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upiuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4ciw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_habgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4ffb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsgo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyeg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnhjh")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1vua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubl7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmlxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhtdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx4la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m46u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3r77s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeyb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoi4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aoew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u45c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srde8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou0b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnxli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk0fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tit5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhknc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8tm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1odrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byn2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhox5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0kcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ltby")
}],
"loop": false,
"name": &"Win",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kwoxj"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qco2b"]
size = Vector2(10, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s75sw"]
size = Vector2(8, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2sv01"]
size = Vector2(12, 15)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_q8q0r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 10
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_w5i82")
animation = &"Win"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_kwoxj")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 16
limit_bottom = 80
position_smoothing_enabled = true
drag_top_margin = 0.5
drag_bottom_margin = 0.0

[node name="BeAttackedArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeAttackedArea"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_qco2b")

[node name="HeadArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadArea2D"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_s75sw")

[node name="FinalCoinArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinalCoinArea2D"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_2sv01")

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(-6, 0)

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(6, 0)

[node name="AudioPlayerAttack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7115e")

[node name="AudioPlayerBeAttacked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_omvlk")

[node name="AudioPlayerWin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wv0jb")

[connection signal="body_entered" from="BeAttackedArea" to="." method="_on_be_attacked_area_body_entered"]
[connection signal="body_entered" from="HeadArea2D" to="." method="_on_head_area_2d_body_entered"]
[connection signal="area_entered" from="FinalCoinArea2D" to="." method="_on_final_coin_area_2d_area_entered"]
